# djrepo

./: .gitignore  Dockerfile  build.sh  pyproject.toml  requirements.txt
main/: urls.py  views.py
mysite/: settings.py  urls.py
