[project]
name = "mysite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==6.0.2",
    "faker==40.1.2",
    "gunicorn>=25.1.0",
    "pillow==12.1.0",
    "psycopg-binary>=3.3.2",
    "psycopg2==2.9.11",
    "psycopg2-binary>=2.9.11",
    "whitenoise[brotli]>=6.11.0",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
